--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.74.4",
+    "@tanstack/react-query-devtools": "^5.75.5",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "jotai": "^2.12.3",
